charset name fix, alignment fix

--- a/src/scss/background.scss
+++ b/src/scss/background.scss
@@ -44,7 +44,6 @@ $gradiend: radial-gradient(circle, rgba(90, 90, 255, 0.6), rgba(90, 90, 255, 0.8
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  align-items: center;
   &:after {
     z-index: 1;
     content: "";
